Unit: Added Users = new List<Users>();  to constructor.
EmployeeSalaryComparison controller: Added return result values for all items that change on the server-side so that they might be updated on the client-side after the Ajax save.
EmployeeSalaryComparison/Details: Added logic to use associative array and data field name to decode data table cell number instead of cell number itself.  That way the position can change and the cell number not need to be updated.

--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -176,13 +176,30 @@
                         dtable.fnClose(employeeRow[0]);
                     },
                     success: function (result) {
+                    debugger;
+                        var oSettings = dtable.fnSettings();
+                        var oColumns = oSettings.aoColumns;
+                        var i;
+                        var oColumnNames = new Array();
+                        for (i = 0; i < oColumns.length; i++) {
+                            oColumnNames[oColumns[i].sName] = i;
+                        };
+
                         var resultrow = employeeRow[0];
                         //update the row
-                        dtable.fnUpdate(data.hireDate, resultrow, 7, false, false); //False params to not redraw until second call
-                        dtable.fnUpdate(data.titleDate, resultrow, 9, false, false);
-                        dtable.fnUpdate(data.experienceDate, resultrow, 11, false, false);
-                        dtable.fnUpdate(data.deptComments, resultrow, 14, false, false);
-                        dtable.fnUpdate(data.deansComments, resultrow, 15);
+                        //dtable.fnUpdate(data.hireDate, resultrow, oColumnNames["AdjustedCareerHireDate"], false, false); //False params to not redraw until second call
+                        var hireDate = result.hireDate;
+                        dtable.fnUpdate(hireDate, resultrow, oColumnNames["AdjustedCareerHireDate"], false, false); //False params to not redraw until second call
+                        dtable.fnUpdate(result.yearsOfService, resultrow, oColumnNames["YearsOfService"], false, false);
+                        //dtable.fnUpdate(data.titleDate, resultrow, oColumnNames["AdjustedApptHireDate"], false, false);
+                        dtable.fnUpdate(result.titleDate, resultrow, oColumnNames["AdjustedApptHireDate"], false, false);
+                        dtable.fnUpdate(result.timeInTitle, resultrow, oColumnNames["TimeInTitle"], false, false);
+                        //dtable.fnUpdate(data.experienceDate, resultrow, oColumnNames["ExperienceBeginDate"], false, false);
+                        dtable.fnUpdate(result.experienceDate, resultrow, oColumnNames["ExperienceBeginDate"], false, false);
+
+                        dtable.fnUpdate(result.yearsOfExperience, resultrow, oColumnNames["YearsOfExperience"], false, false);
+                        dtable.fnUpdate(data.deptComments, resultrow, oColumnNames["DepartmentComments"], false, false);
+                        dtable.fnUpdate(data.deansComments, resultrow, oColumnNames["DeansOfficeComments"]);
 
                         //updated the headers for the pps checked/adjusted columns
                         if (data.hireChecked) {
@@ -269,6 +286,15 @@
         /* Formating function for row details */
         function fnFormatDetails(dTable, row) {
             //debugger;
+            var oSettings = dTable.fnSettings();
+            var oColumns = oSettings.aoColumns;
+            var i;
+            var oColumnNames = new Array();
+
+            for (i = 0; i < oColumns.length; i++) {
+                oColumnNames[oColumns[i].sName] = i;
+            };
+
             var rowContents = row[0];
             var careerChecked = row.find(".hire-date").hasClass("date-checked");
             var apptChecked = row.find(".title-date").hasClass("date-checked");
@@ -281,22 +307,22 @@
             var sOut = '';
             sOut += '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
             //sOut += '<tr><td>Is Department User: ' + isDepartmentUser + '</td></tr>';
-            sOut += '<tr><td>Editing ' + aData[6] + '</td></tr>';
-            sOut += '<tr><td>Hire Date: <input class="hire-date datepicker" type="text" value="' + aData[7] + '"/>&nbsp;<input class="hire-checked" type="checkbox" ' + (careerChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
-            sOut += '<tr><td>Title Begin Date: <input class="title-date datepicker" type="text" value="' + aData[9] + '"/>&nbsp;<input class="title-checked" type="checkbox" ' + (apptChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
-            sOut += '<tr><td>Experience Begin Date: <input class="experience-date datepicker" type="text" value="' + aData[11] + '"/></td></tr>';
+            sOut += '<tr><td>Editing ' + aData[oColumnNames["FullName"]] + '</td></tr>';
+            sOut += '<tr><td>Hire Date: <input class="hire-date datepicker" type="text" value="' + aData[oColumnNames["AdjustedCareerHireDate"]] + '"/>&nbsp;<input class="hire-checked" type="checkbox" ' + (careerChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
+            sOut += '<tr><td>Title Begin Date: <input class="title-date datepicker" type="text" value="' + aData[oColumnNames["AdjustedApptHireDate"]] + '"/>&nbsp;<input class="title-checked" type="checkbox" ' + (apptChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
+            sOut += '<tr><td>Experience Begin Date: <input class="experience-date datepicker" type="text" value="' + aData[oColumnNames["ExperienceBeginDate"]] + '"/></td></tr>';
             if (isDepartmentUser) {
-                sOut += '<tr><td>Department Comments: <textarea class="dept-comments" rows="3" cols="20">' + aData[14] + '</textarea></td></tr>';
+                sOut += '<tr><td>Department Comments: <textarea class="dept-comments" rows="3" cols="20">' + aData[oColumnNames["DepartmentComments"]] + '</textarea></td></tr>';
             }
             else {
-                sOut += '<tr><td>Department Comments: <textarea class="dept-comments" rows="3" cols="20" readonly="readonly" style="background-color:LightGrey;">' + aData[14] + '</textarea></td></tr>';
+                sOut += '<tr><td>Department Comments: <textarea class="dept-comments" rows="3" cols="20" readonly="readonly" style="background-color:LightGrey;">' + aData[oColumnNames["DepartmentComments"]] + '</textarea></td></tr>';
             }
 
             if (isDepartmentUser) {
-                sOut += '<tr><td>Dean\'s Office Comments: <textarea class="deans-comments" rows="3" cols="20" readonly="readonly" style="background-color:LightGrey;">' + aData[15] + '</textarea></td></tr>';
+                sOut += '<tr><td>Dean\'s Office Comments: <textarea class="deans-comments" rows="3" cols="20" readonly="readonly" style="background-color:LightGrey;">' + aData[oColumnNames["DeansOfficeComments"]] + '</textarea></td></tr>';
             }
             else {
-                sOut += '<tr><td>Dean\'s Office Comments: <textarea class="deans-comments" rows="3" cols="20">' + aData[15] + '</textarea></td></tr>';
+                sOut += '<tr><td>Dean\'s Office Comments: <textarea class="deans-comments" rows="3" cols="20">' + aData[oColumnNames["DeansOfficeComments"]] + '</textarea></td></tr>';
             }
 
             sOut += '<tr><td><input class="save-employee" data-id="' + rowId + '" type="submit" value="Save" />&nbsp;&nbsp;<a class="close-row" href="#">Close</a></td></tr>';
