Worked NHibernate profiler and made modifications to limit number of database accesses to 1 for each type of objects, i.e. Employees, Departments, Titles, Etc.
This was mainly achieved by fetching all objects of a particular type and then using LINQ to do any additional filtering and sorting, plus using any previously fetched lists in subsequent methods.

Moved some of the "fetching" logic from the controller to the model in order to minimize amount of code duplication.

Got most of the LINQ many-to-many queries working properly.

--- a/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
@@ -86,7 +86,11 @@
                         <td>@emp.IsDepartmentEmployee
                         </td>
                         <td class="is-department-user @(Session[GlobalConstants.KEY_IS_DEPARTMENT_USER] != null ? Session[GlobalConstants.KEY_IS_DEPARTMENT_USER] as bool? : false)">
-                            <a href="#" class="edit-row">Edit</a>
+                            @if ((Model.IsDepartmentUser && emp.IsDepartmentEmployee) || (!Model.IsDepartmentUser))
+                            {
+                                // Only display the edit link for department employees.
+                                <text><a href='#' class='edit-row'>Edit</a></text>
+                            }
                         </td>
                         <td>@((Model.IsDepartmentUser && emp.IsDepartmentEmployee) || (!Model.IsDepartmentUser) ? emp.HomeDepartment.Name : String.Empty)
                         </td>
