Work on Salary Review Analysis scenario javascript.

--- a/Esra.Web/Views/SalaryReviewAnalysis/_EmployeeDetails.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_EmployeeDetails.cshtml
@@ -91,7 +91,7 @@
             <td>
                 @String.Format("{0:0.00}", @Model.SraEmployee.TimeInTitle)
             </td>
-            <td>
+            <td id="payrate">
                 @String.Format("{0:c}", @Model.SraEmployee.PayRate)
             </td>
             <td>
