--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -14,6 +14,11 @@
     <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
         type="text/javascript"></script>
     <script src="@Url.Script("jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    <script src="@Url.Script("jquery.formatCurrency-1.4.0.min.js")" type="text/javascript"></script>
+    <script src="@Url.Script("jshashtable.js")" type="text/javascript"></script>
+    <script src="@Url.Script("jquery.numberformatter-1.2.2.min.js")" type="text/javascript"></script>
+    <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
+        type="text/javascript"></script>
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
@@ -120,5 +125,16 @@
             s.parentNode.insertBefore(g, s)
         } (document, "script"));
     </script>*@
+    <script language="JavaScript" type="text/javascript">
+        $(document).ready(function () {
+            $('.datatable').dataTable({
+                "bProcessing": true,
+                //"bServerSide": true,
+                "bJQueryUI": true,
+                "aLengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],  // This allows for the "display all" records feature.
+                "sPaginationType": "full_numbers"
+            });
+        })
+    </script>
 </body>
 </html>
