--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
     <script src="@Url.Script("jquery.numberformatter-1.2.2.min.js")" type="text/javascript"></script>
     <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
         type="text/javascript"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js" type="text/javascript"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"
+        type="text/javascript"></script>
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
